--- a/app/cart/templates/cart/detail.html
+++ b/app/cart/templates/cart/detail.html
@@ -1,22 +1,23 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 {% load static %}
 
 {% block title %}
-  Ваша корзина
+  {% trans 'Ваша корзина' %}
 {% endblock %}
 
 {% block content %}
   {% if cart %}
-  <h1>Ваша корзина</h1>
+  <h1>{% trans 'Ваша корзина' %}</h1>
   <table class="cart">
     <thead>
       <tr>
-        <th>Изображение</th>
-        <th>Товар</th>
-        <th>Количество</th>
-        <th>Удалить</th>
-        <th>Цена за единицу</th>
-        <th>Цена</th>
+        <th>{% trans 'Изображение' %}</th>
+        <th>{% trans 'Товар' %}</th>
+        <th>{% trans 'Количество' %}</th>
+        <th>{% trans 'Удалить' %}</th>
+        <th>{% trans 'Цена за единицу' %} </th>
+        <th>{% trans 'Цена' %}</th>
       </tr>
     </thead>
     <tbody>
@@ -34,13 +35,13 @@
               <form action="{% url "cart:cart_add" product.id %}" method="post">
                 {{ item.update_quantity_form.quantity }}
                 {{ item.update_quantity_form.override }}
-                <input type="submit" value="Обновить">
+                <input type="submit" value="{% trans 'Обновить' %}">
                 {% csrf_token %}
               </form>
             </td>
             <td>
               <form action="{% url "cart:cart_remove" product.id %}" method="post">
-                <input type="submit" value="Удалить">
+                <input type="submit" value="{% trans 'Удалить' %}">
                 {% csrf_token %}
               </form>
             </td>
@@ -52,14 +53,14 @@
 
       {% if cart.coupon %}
         <tr class="subtotal">
-          <td>Промежуточный итог</td>
+          <td>{% trans 'Промежуточный итог' %}</td>
           <td colspan="4"></td>
           <td class="num">{{ cart.get_total_price|floatformat:2 }} ₽</td>
         </tr>
         <tr>
           <td>
-            "{{ cart.coupon.code }}" купон
-            (скидка {{ cart.coupon.discount }}%)
+            "{{ cart.coupon.code }}" {% trans 'купон' %}
+            ({% trans 'скидка' %} {{ cart.coupon.discount }}%)
           </td>
           <td colspan="4"></td>
           <td class="num neg">
@@ -69,7 +70,7 @@
       {% endif %}
 
       <tr class="total">
-        <td>Общая сумма</td>
+        <td>{% trans 'Общая сумма' %}</td>
         <td colspan="4"></td>
         <td class="num">{{ cart.get_total_price_with_discount|floatformat:2 }} ₽</td>
       </tr>
@@ -77,7 +78,7 @@
   </table>
     {% if recommended_products %}
     <div class="recommendations cart">
-      <h3>Рекомендуем Вам также посмотреть:</h3>
+      <h3>{% trans 'Рекомендуем Вам также посмотреть:' %}</h3>
       {% for p in recommended_products %}
         <div class="item">
           <a href="{{ p.get_absolute_url }}">
@@ -91,20 +92,20 @@
     {% endif %}
   <p class="text-right">
     <a href="{% url "shop:product_list" %}" class="button
-    light">Продолжить покупки</a>
-    <a href="{% url "orders:order_create" %}" class="button">Оформить</a>
+    light">{% trans 'Продолжить покупки' %}</a>
+    <a href="{% url "orders:order_create" %}" class="button">{% trans 'Оформить' %}</a>
   </p>
   <br>
   <form action="{% url "coupons:apply" %}" class='coupon_form' method="post" >
     {{ coupon_apply_form }}
-    <input type="submit" value="Применить">
+    <input type="submit" value="{% trans 'Применить' %}">
     {% csrf_token %}
   </form>
   {% else %}
-   <h1>Ваша корзина пуста</h1>
+   <h1>{% trans 'Ваша корзина пуста' %}</h1>
   <br>
     <p class="text-left">
-        <a href="{% url "shop:product_list" %}" class="button">Продолжить покупки</a>
+        <a href="{% url "shop:product_list" %}" class="button">{% trans 'Продолжить покупки' %}</a>
     </p>
   {% endif %}
 {% endblock %}
