--- a/app/orders/templates/orders/order/create.html
+++ b/app/orders/templates/orders/order/create.html
@@ -1,13 +1,14 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 
 {% block title %}
-  Оформление заказа
+  {% trans 'Оформление заказа' %}
 {% endblock %}
 
 {% block content %}
-  <h1>Оформление заказа</h1>
+  <h1>{% trans 'Оформление заказа' %}</h1>
   <div class="order-info">
-    <h3>Ваш заказ</h3>
+    <h3>{% trans 'Ваш заказ' %}</h3>
     <ul>
       {% for item in cart %}
         <li>
@@ -17,17 +18,17 @@
       {% endfor %}
       {% if cart.coupon %}
         <li>
-          "{{ cart.coupon.code }}" (скидка {{ cart.coupon.discount }}%)
+          "{{ cart.coupon.code }}" ({% trans 'скидка' %} {{ cart.coupon.discount }}%)
           <span class="neg">-{{ cart.get_discount|floatformat:2 }} ₽</span>
         </li>
       {% endif %}
     </ul>
-    <p>Всего: {{ cart.get_total_price_with_discount|floatformat:2 }} ₽</p>
+    <p>{% trans 'Всего' %}: {{ cart.get_total_price_with_discount|floatformat:2 }} ₽</p>
   </div>
   <form method="post" class="order-form">
     {{ form.as_p }}
     <p>
-      <input type="submit" value="Оформить заказ">
+      <input type="submit" value="{% trans 'Оформить заказ' %}">
     </p>
     {% csrf_token %}
   </form>
