--- a/app/orders/templates/orders/order/created.html
+++ b/app/orders/templates/orders/order/created.html
@@ -1,11 +1,12 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 
 {% block title %}
-  Спасибо за заказ!
+  {% trans 'Спасибо за заказ!' %}
 {% endblock %}
 
 {% block content %}
-  <h1>Благодарим за заказ!</h1>
-  <p>Ваш заказ был успешно оформлен. Номер Вашего заказа -
+  <h1>{$trans 'Благодарим за заказ!' %}</h1>
+  <p>{% trans 'Ваш заказ был успешно оформлен. Номер Вашего заказа' %} -
   <strong>{{ new_order.id }}</strong>.</p>
 {% endblock %}
