--- a/app/users/templates/registration/password_change_form.html
+++ b/app/users/templates/registration/password_change_form.html
@@ -1,11 +1,12 @@
 {% extends "shop/base.html" %}
-{% block title %}Изменение пароля{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Изменение пароля' %}{% endblock %}
 {% block content %}
-    <h1>Изменение пароля</h1>
-    <p>Используйте форму для смены пароля</p>
+    <h1>{% trans 'Изменение пароля' %}</h1>
+    <p>{% trans 'Используйте форму для смены пароля' %}</p>
     <form method="post" class="login-form">
         {{ form.as_p }}
-        <p><input type="submit" value="Изменить"></p>
+        <p><input type="submit" value="{% trans 'Изменить' %}"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
