--- a/app/users/templates/registration/password_reset_complete.html
+++ b/app/users/templates/registration/password_reset_complete.html
@@ -1,8 +1,9 @@
 {% extends "shop/base.html" %}
-{% block title %}Пароль обновлен{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Пароль обновлен' %}{% endblock %}
 
 {% block content %}
-  <h1>Пароль обновлен</h1>
-  <p>Ваш пароль был обновлен
-  Вы можете <a href="{% url "users:login" %}">войти в систему</a></p>
+  <h1>{% trans 'Пароль обновлен' %}</h1>
+  <p>{% trans 'Ваш пароль был обновлен' %}
+  {% trans 'Вы можете' %} <a href="{% url "users:login" %}">{% trans 'войти в систему' %}</a></p>
 {% endblock %}
