--- a/app/users/templates/registration/password_reset_confirm.html
+++ b/app/users/templates/registration/password_reset_confirm.html
@@ -1,17 +1,18 @@
 {% extends "shop/base.html" %}
-{% block title %}Обновить пароль{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Обновить пароль' %}{% endblock %}
 
 {% block content %}
-    <h1>Обновить пароль</h1>
+    <h1>{% trans 'Обновить пароль' %}</h1>
     {% if validlink %}
-        <p>Пожалуйста, введите новый пароль дважды</p>
+        <p>{% trans 'Пожалуйста, введите новый пароль дважды' %}</p>
         <form method="post">
             {{ form.as_p }}
             {% csrf_token %}
-            <p><input type="submit" value="Сменить мой пароль"/></p>
+            <p><input type="submit" value="{% trans 'Сменить мой пароль' %}"/></p>
         </form>
     {% else %}
-        <p>Ссылка для сброса пароля неверна, возможно она уже была использована.</p>
-        <p>Пожалуйста запросите сброс пароля еще раз</p>
+        <p>{% trans 'Ссылка для сброса пароля неверна, возможно она уже была использована' %}.</p>
+        <p>{% trans 'Пожалуйста запросите сброс пароля еще раз' %}</p>
     {% endif %}
 {% endblock %}
