--- a/app/users/templates/registration/password_reset_done.html
+++ b/app/users/templates/registration/password_reset_done.html
@@ -1,8 +1,9 @@
 {% extends "shop/base.html" %}
-{% block title %}Сброс пароля{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Сброс пароля' %}{% endblock %}
 {% block content %}
-    <h1>Сброс пароля</h1>
-    <p>Мы отправили на Вашу электронную почту инструкцию для сброса пароля</p>
-    <p>Если вы не получили письмо, то проверьте правильность введенного адреса</p>
+    <h1>{% trans 'Сброс пароля' %}</h1>
+    <p>{% trans 'Мы отправили на Вашу электронную почту инструкцию для сброса пароля' %}</p>
+    <p>{% trans 'Если вы не получили письмо, то проверьте правильность введенного адреса' %}</p>
 
 {% endblock %}
