--- a/app/users/templates/registration/password_reset_email.html
+++ b/app/users/templates/registration/password_reset_email.html
@@ -1,5 +1,6 @@
-Кто-то запросил сброс пароля на адрес {{ email }}.
-Для того, чтобы сбросить пароль, перейдите по ссылке:
+{% load i18n %}
+{% blocktrans %} Кто-то запросил сброс пароля на адрес {{ email }}.
+Для того, чтобы сбросить пароль, перейдите по ссылке: {% endblocktrans %}
 {{ protocol }}://{{ domain }}{% url "users:password_reset_confirm" uidb64=uid token=token %}
 
-Если вы не запрашивали это письмо, то игнорируйте его.
+{% trans 'Если вы не запрашивали это письмо, то игнорируйте его' %}.
