--- a/app/users/templates/registration/password_reset_form.html
+++ b/app/users/templates/registration/password_reset_form.html
@@ -1,11 +1,12 @@
 {% extends "shop/base.html" %}
-{% block title %}Reset your password{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Сбросить пароль' %}{% endblock %}
 {% block content %}
-    <h1>Забыли свой пароль?</h1>
-    <p>Введите ваш email адрес, чтобы восстановить пароль</p>
+    <h1>{% trans 'Забыли свой пароль' %}?</h1>
+    <p>{% trans 'Введите ваш email адрес, чтобы восстановить пароль' %}</p>
     <form method="post">
         {{ form.as_p }}
-        <p><input type="submit" value="Отправить сообщение"></p>
+        <p><input type="submit" value="{% trans 'Отправить сообщение' %}"></p>
         {% csrf_token %}
     </form>
 {% endblock %}
