--- a/app/shop/templates/shop/product/list.html
+++ b/app/shop/templates/shop/product/list.html
@@ -1,13 +1,14 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 {% load static %}
 
 {% block title %}
-  {% if category %}{{ category.name }}{% else %}Товары{% endif %}
+  {% if category %}{{ category.name }}{% else %}{% trans 'Товары' %}{% endif %}
 {% endblock %}
 
 {% block content %}
   <div id="sidebar">
-    <h1>Категории</h1>
+    <h1>{% trans 'Категории' %}</h1>
     <ul>
       <li {% if not category %}class="selected"{% endif %}>
         <a href="{% url "shop:product_list" %}">Все</a>
@@ -20,7 +21,7 @@
     </ul>
   </div>
   <div id="main" class="product-list">
-    <h1>{% if category %}{{ category.name }}{% else %}Товары{% endif %}</h1>
+    <h1>{% if category %}{{ category.name }}{% else %}{% trans 'Товары' %}{% endif %}</h1>
     {% for product in products %}
       <div class="item">
         <a href="{{ product.get_absolute_url }}">
