--- a/app/users/templates/account/delete.html
+++ b/app/users/templates/account/delete.html
@@ -1,12 +1,13 @@
 {% extends "shop/base.html" %}
-{% block title %}Удаление аккаунта{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Удаление аккаунта' %}{% endblock %}
 
 {% block content %}
-  <h1>Удаление аккаунта</h1>
-  <p>Для того, чтобы подтвердить удаление аккаунта, введите Ваш пароль:</p>
+  <h1>{% trans 'Удаление аккаунта' %}</h1>
+  <p>{% trans 'Для того, чтобы подтвердить удаление аккаунта, введите Ваш пароль' %}:</p>
   <form method="post" enctype="multipart/form-data">
     {{ delete_form.as_p }}
     {% csrf_token %}
-    <p><input type="submit" value="Удалить аккаунт"></p>
+    <p><input type="submit" value="{% trans 'Удалить аккаунт' %}"></p>
   </form>
 {% endblock %}
