--- a/app/users/templates/account/register_done.html
+++ b/app/users/templates/account/register_done.html
@@ -1,10 +1,11 @@
 {% extends "shop/base.html" %}
-{% block title %}Добро пожаловать!{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Добро пожаловать' %}!{% endblock %}
 
 {% block content %}
-    <h1>Добро пожаловать в Семерочку, {{ new_user.first_name }}!</h1>
+    <h1>{% trans 'Добро пожаловать в Семерочку' %}, {{ new_user.first_name }}!</h1>
     <p>
-        Ваш аккаунт был создан
-        Вы можете <a href="{% url "users:login" %}">войти в систему</a>.
+        {% trans 'Ваш аккаунт был создан' %}
+        {% trans 'Вы можете' %} <a href="{% url "users:login" %}">{% trans 'войти в систему' %}.</a>
     </p>
 {% endblock %}
