--- a/app/users/templates/account/user/detail.html
+++ b/app/users/templates/account/user/detail.html
@@ -1,36 +1,37 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 
 {% block title %}{{ user.get_full_name }}{% endblock %}
 
 {% block content %}
   <div class="profile-info">
-    <h1>Ваш профиль:</h1>
-    <h2>Имя:</h2>
+    <h1>{% trans 'Ваш профиль' %}:</h1>
+    <h2>{% trans 'Имя' %}:</h2>
     <h3>{{ user.first_name }}</h3>
-    <h2>Фамилия:</h2>
+    <h2>{% trans 'Фамилия' %}:</h2>
     <h3>{{ user.last_name }}</h3>
-    <h2>Электронная почта:</h2>
+    <h2>{% trans 'Электронная почта' %}:</h2>
     <h3>{{ user.email }}</h3>
-    <p class="text-left"><a href="{% url "users:user_edit" %}" class="button">Редактировать</a>
-        <a href="{% url "users:password_change" %}" class="button">Сменить пароль</a></p>
+    <p class="text-left"><a href="{% url "users:user_edit" %}" class="button">{% trans 'Редактировать' %}</a>
+        <a href="{% url "users:password_change" %}" class="button">{% trans 'Сменить пароль' %}</a></p>
     <br>
     <p class="text-left">
-      <a href="{% url "users:user_delete" %}" class="button light">Удалить аккаунт</a>
-      <a href="{% url "users:logout" %}" class="button light">Выйти</a>
+      <a href="{% url "users:user_delete" %}" class="button light">{% trans 'Удалить аккаунт' %}</a>
+      <a href="{% url "users:logout" %}" class="button light">{% trans 'Выйти' %}</a>
     </p>
   </div>
   <br>
   <br>
   <div class="order-info-profile">
-    <h2>Ваши заказы:</h2>
+    <h2>{% trans 'Ваши заказы' %}:</h2>
       <ul>
         {% for order in orders %}
           <li>
-            <a href="{{ order.get_absolute_url }}">Заказ №{{ order.id }} от {{order.get_created_date}}
-            на сумму {{ order.get_total_cost }} &#8381</a>
+            <a href="{{ order.get_absolute_url }}">{% trans 'Заказ' %} №{{ order.id }} {% trans 'от' %} {{order.get_created_date}}
+            {% trans 'на сумму' %} {{ order.get_total_cost }} &#8381</a>
           </li>
         {% empty %}
-        <h3>Вы еще не сделали ни одного заказа</h3>
+        <h3>{% trans 'Вы еще не сделали ни одного заказа' %}</h3>
         {% endfor %}
       </ul>
   </div>
