--- a/app/users/templates/registration/password_change_done.html
+++ b/app/users/templates/registration/password_change_done.html
@@ -1,8 +1,9 @@
 {% extends "shop/base.html" %}
-{% block title %}Пароль изменен{% endblock %}
+{% load i18n %}
+{% block title %}{% trans 'Пароль изменен' %}{% endblock %}
 
 {% block content %}
-  <h1>Пароль изменен</h1>
-  <p>Ваш пароль был успешно изменен!</p>
-  <p><a href="{% url "shop:product_list" %}">Продолжить покупки</a></p>
+  <h1>{% trans 'Пароль изменен' %}</h1>
+  <p>{% trans 'Ваш пароль был успешно изменен' %}!</p>
+  <p><a href="{% url "shop:product_list" %}">{% trans 'Продолжить покупки' %}</a></p>
 {% endblock %}
