--- a/app/orders/templates/orders/order/detail.html
+++ b/app/orders/templates/orders/order/detail.html
@@ -2,34 +2,34 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{$ trans 'Заказ' %} №{{order.id}}{% endblock %}
+{% block title %}{% trans 'Заказ' %} №{{order.id}}{% endblock %}
 
 {% block content %}
 {% if request.user == order.user or request.user.is_staff %}
   <div class="order_detail_info">
-    <h1>{$ trans 'Заказ' %} №{{order.id}}</h1>
-    <h2>{$ trans 'Покупатель' %}:</h2>
+    <h1>{% trans 'Заказ' %} №{{order.id}}</h1>
+    <h2>{% trans 'Покупатель' %}:</h2>
     <h3>{{ order.user.first_name }} {{ order.user.last_name }}</h3>
-    <h2>{$ trans 'Электронная почта' %}</h2>
+    <h2>{% trans 'Электронная почта' %}</h2>
     <h3>{{ order.user.email }}</h3>
-    <h2>{$ trans 'Адрес доставки' %}</h2>
+    <h2>{% trans 'Адрес доставки' %}</h2>
     <h3>{{ order.postal_code }}, г.{{ order.city }}, {{ order.address }}</h3>
-    <h2>{$ trans 'Дата заказа' %}</h2>
+    <h2>{% trans 'Дата заказа' %}</h2>
     <h3>{{ order.get_created_date }}</h3>
-    <h2>{$ trans 'Статус заказа' %}</h2>
+    <h2>{% trans 'Статус заказа' %}</h2>
     <h3>{% if order.paid %}{%trans 'Оплачено' %}{% else %}{% trans 'Не оплачено' %}{% endif %}</h3>
   </div>
 
   <div class="order_detail_items">
-    <h2>{$ trans 'Состав заказа' %}</h2>
+    <h2>{% trans 'Состав заказа' %}</h2>
     <table class="cart">
         <thead>
           <tr>
-            <th>{$ trans 'Изображение' %}</th>
-            <th>{$ trans 'Товар' %}</th>
-            <th>{$ trans 'Количество' %}</th>
-            <th>{$ trans 'Цена за единицу' %}</th>
-            <th>{$ trans 'Цена' %}</th>
+            <th>{% trans 'Изображение' %}</th>
+            <th>{% trans 'Товар' %}</th>
+            <th>{% trans 'Количество' %}</th>
+            <th>{% trans 'Цена за единицу' %}</th>
+            <th>{% trans 'Цена' %}</th>
           </tr>
         </thead>
         <tbody>
@@ -52,7 +52,7 @@
 
           {% if order.coupon %}
             <tr class="subtotal">
-              <td>{$ trans 'Промежуточный итог' %}</td>
+              <td>{% trans 'Промежуточный итог' %}</td>
               <td colspan="3"></td>
               <td class="num">{{ order.get_total_cost_before_discount|floatformat:2 }} ₽</td>
             </tr>
