--- a/app/users/templates/registration/password_reset_email.html
+++ b/app/users/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 {% load i18n %}
-{% blocktrans %} Кто-то запросил сброс пароля на адрес {{ email }}.
-Для того, чтобы сбросить пароль, перейдите по ссылке: {% endblocktrans %}
+{% trans  'Кто-то запросил сброс пароля на адрес' %} {{ email }}.
+{% trans   'Для того, чтобы сбросить пароль, перейдите по ссылке' %}:
 {{ protocol }}://{{ domain }}{% url "users:password_reset_confirm" uidb64=uid token=token %}
 
 {% trans 'Если вы не запрашивали это письмо, то игнорируйте его' %}.
