update celery in docker-compose.yaml, fixed settings.py. added migrations

--- a/app/users/templates/registration/login.html
+++ b/app/users/templates/registration/login.html
@@ -6,8 +6,7 @@
   <h1>{% trans 'Войти' %}</h1>
   {% if form.errors %}
     <p>
-      {% trans 'Ваше имя пользователя или почта и пароль не совпадают.
-      Пожалуйста, попробуйте еще раз' %}
+      {% trans 'Ваше имя пользователя или почта и пароль не совпадают. Пожалуйста, попробуйте еще раз' %}
     </p>
   {% else %}
     <p>
